# RL-haptix-pytorch

./: README.md  arat.world  main.py
gazebo_plugin_tutorial/: CMakeLists.txt  hello_world.cc  hello_world1.cc
gazebo_plugin_tutorial/pylib/: int.py  mid.py  test.py
haptix_controller/: CMakeLists.txt  hx_ctl.c  hx_ctl.cc  hx_ctl_py.c
rl/: env.py  model.py
rl/agents/: a3c.py  a3cSingleArm.py  a3cSingleProcess.py
utils/: helpers.py  options.py
